syntax = "proto3";

package k1s0.system.auth.v1;

option go_package = "github.com/k1s0-platform/system-proto-go/auth/v1;authv1";

import "google/protobuf/timestamp.proto";
import "v1/common.proto";

// AuthService は認証・認可サービス。
service AuthService {
  // ValidateToken は JWT トークンを検証する。
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  // GetUser はユーザー情報を取得する。
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // ListUsers はユーザー一覧を取得する。
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  // GetUserRoles はユーザーのロール一覧を取得する。
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse);
  // CheckPermission はロールベースのパーミッション確認を行う。
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
}

// AuditService は監査ログサービス。
service AuditService {
  // RecordAuditLog は監査ログエントリを記録する。
  rpc RecordAuditLog(RecordAuditLogRequest) returns (RecordAuditLogResponse);
  // SearchAuditLogs は監査ログを検索する。
  rpc SearchAuditLogs(SearchAuditLogsRequest) returns (SearchAuditLogsResponse);
}

// --- ValidateToken ---

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  TokenClaims claims = 2;
  string error_message = 3;
}

message TokenClaims {
  string sub = 1;
  string iss = 2;
  string aud = 3;
  int64 exp = 4;
  int64 iat = 5;
  string jti = 6;
  string preferred_username = 7;
  string email = 8;
  RealmAccess realm_access = 9;
  map<string, ClientRoles> resource_access = 10;
  repeated string tier_access = 11;
}

message RealmAccess {
  repeated string roles = 1;
}

message ClientRoles {
  repeated string roles = 1;
}

// --- User ---

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  bool enabled = 6;
  bool email_verified = 7;
  google.protobuf.Timestamp created_at = 8;
  map<string, StringList> attributes = 9;
}

message StringList {
  repeated string values = 1;
}

// --- ListUsers ---

message ListUsersRequest {
  k1s0.system.common.v1.Pagination pagination = 1;
  string search = 2;
  optional bool enabled = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  k1s0.system.common.v1.PaginationResult pagination = 2;
}

// --- Roles ---

message GetUserRolesRequest {
  string user_id = 1;
}

message GetUserRolesResponse {
  string user_id = 1;
  repeated Role realm_roles = 2;
  map<string, RoleList> client_roles = 3;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
}

message RoleList {
  repeated Role roles = 1;
}

// --- Permission ---

message CheckPermissionRequest {
  string user_id = 1;
  string permission = 2;
  string resource = 3;
  repeated string roles = 4;
}

message CheckPermissionResponse {
  bool allowed = 1;
  string reason = 2;
}

// --- Audit Log ---

message RecordAuditLogRequest {
  string event_type = 1;
  string user_id = 2;
  string ip_address = 3;
  string user_agent = 4;
  string resource = 5;
  string action = 6;
  string result = 7;
  map<string, string> metadata = 8;
}

message RecordAuditLogResponse {
  string id = 1;
  google.protobuf.Timestamp recorded_at = 2;
}

message SearchAuditLogsRequest {
  k1s0.system.common.v1.Pagination pagination = 1;
  string user_id = 2;
  string event_type = 3;
  google.protobuf.Timestamp from = 4;
  google.protobuf.Timestamp to = 5;
  string result = 6;
}

message SearchAuditLogsResponse {
  repeated AuditLog logs = 1;
  k1s0.system.common.v1.PaginationResult pagination = 2;
}

message AuditLog {
  string id = 1;
  string event_type = 2;
  string user_id = 3;
  string ip_address = 4;
  string user_agent = 5;
  string resource = 6;
  string action = 7;
  string result = 8;
  map<string, string> metadata = 9;
  google.protobuf.Timestamp recorded_at = 10;
}
